# django_blog

./: .gitignore  pyproject.toml  requirements.txt
django_project/: db.sqlite3
django_project/blog/: views.py
django_project/blog/migrations/: 0001_initial.py
django_project/blog/templates/blog/: about.html  base.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
django_project/django_project/: settings.py  urls.py
django_project/users/: models.py  views.py
django_project/users/migrations/: 0001_initial.py
django_project/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
