[project]
name = "django-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "crispy-bootstrap4>=2025.6",
    "django>=5.2.4",
    "django-crispy-forms>=2.4",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
]
